# kateb

./: .env.example  .gitignore  API_INTEGRATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_NOTES.md  LICENSE  README.md  SECURITY.md  dev.sh  fix.md  nuxt.config.ts  package.json  pnpm-lock.yaml
.claude/commands/: project.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  test-build.yml
app/: app.config.ts  app.vue  error.vue
app/assets/css/: main.css
app/components/: AppLogo.vue
app/composables/: useAI.js  useDictation.js  useHistory.js  useModels.js  useSettings.js  useStats.js  useUpdater.js
app/layouts/: dashboard.vue
app/locales/: ar.json
app/middleware/: first-run.global.js
app/pages/: history.vue  index.vue  models.vue  overlay.vue  settings.vue  stats.vue  support.vue  welcome.vue
app/plugins/: dictation-notifications.client.js  i18n-dir.js  locale.client.js
app/utils/: tauri.js
docs/: Arabic-ASR-Models-Research.md  Project-Gap-Analysis.md  fix.md  project-spec.md
i18n/locales/: ar.json  en.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/ai/: factory.rs  mod.rs  provider.rs  refiner.rs
src-tauri/src/ai/providers/: claude.rs  gemini.rs  grok.rs  local.rs  mod.rs  openai.rs
src-tauri/src/audio/: mod.rs  noise_suppressor.rs  preprocessor.rs  recorder.rs  vad.rs
src-tauri/src/commands/: ai.rs  audio.rs  backup.rs  dictation.rs  history.rs  mod.rs  models.rs  settings.rs  voice_commands.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/keyboard/: simulator.rs
src-tauri/src/models/: downloader.rs  mod.rs
src-tauri/src/security/: keychain.rs
src-tauri/src/whisper/: transcriber.rs
