[package]
name = "kateb"
version = "1.0.0"
description = "Kateb - Arabic & English voice dictation desktop app powered by Whisper AI"
authors = ["Abdelmomen Elshatory <beingmomen@gmail.com>"]
license = "MIT"
repository = "https://github.com/beingmomen/kateb"
edition = "2021"

[lib]
name = "kateb_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
whisper-rs = { version = "0.15", features = ["cuda"] }
enigo = "0.2"
arboard = "3"
rdev = "0.5"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dotenvy = "0.15"
